--- a/calculus.ipynb
+++ b/calculus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,34 +554,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       message: Optimization terminated successfully.\n",
+      "       success: True\n",
+      "        status: 0\n",
+      "           fun: 1.3680165406254092\n",
+      "             x: [ 5.191e+00]\n",
+      "           nit: 20\n",
+      "          nfev: 40\n",
+      " final_simplex: (array([[ 5.191e+00],\n",
+      "                       [ 5.191e+00]]), array([ 1.368e+00,  1.368e+00]))\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.optimize import minimize\n",
     "def f(x):\n",
     "    t = (x/8) + np.sqrt((6-x)**2 + 4)/3\n",
-    "    return t"
+    "    return t\n",
+    "\n",
+    "ans = minimize(f,x0=1.4,method='Nelder-Mead')\n",
+    "print(ans)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function scipy.optimize._minimize.minimize(fun, x0, args=(), method=None, jac=None, hess=None, hessp=None, bounds=None, constraints=(), tol=None, callback=None, options=None)>"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimize?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## prob 1"
    ]
   },
   {
@@ -644,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
