--- a/lagrangian.ipynb
+++ b/lagrangian.ipynb
@@ -309,6 +309,89 @@
     "theta,z = ans.T\n",
     "plt.plot(t,theta)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](1.jpg)\n",
+    "![img](2.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m,l,g,k,t = smp.symbols('m,l,g,k,t', real= True, positive= True)\n",
+    "x, theta = smp.symbols('x, theta', cls=smp.Function)\n",
+    "x = x(t)\n",
+    "theta=theta(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle g m \\left(l + x{\\left(t \\right)}\\right) \\cos{\\left(\\theta{\\left(t \\right)} \\right)} - \\frac{k x^{2}{\\left(t \\right)}}{2} + \\frac{m \\left(\\left(l + x{\\left(t \\right)}\\right)^{2} \\left(\\frac{d}{d t} \\theta{\\left(t \\right)}\\right)^{2} + \\left(\\frac{d}{d t} x{\\left(t \\right)}\\right)^{2}\\right)}{2}$"
+      ],
+      "text/plain": [
+       "g*m*(l + x(t))*cos(theta(t)) - k*x(t)**2/2 + m*((l + x(t))**2*Derivative(theta(t), t)**2 + Derivative(x(t), t)**2)/2"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DthetaDt = smp.diff(theta,t)\n",
+    "DxDt = smp.diff(x,t)\n",
+    "T = smp.Rational(1/2) * m * (DxDt**2 + ((l+x)**2)*DthetaDt**2)\n",
+    "V = -m*g*(l+x)*smp.cos(theta) + smp.Rational(1/2)*k*x**2\n",
+    "L = T-V\n",
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans1 = smp.diff(smp.diff(L,DxDt),t) - smp.diff(L,x)\n",
+    "ans2 = smp.diff(smp.diff(L,DthetaDt),t) - smp.diff(L,theta)\n",
+    "sol = smp.solve([ans1, ans2], [smp.diff(x,t,t), smp.diff(theta,t,t)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{g \\sin{\\left(\\theta{\\left(t \\right)} \\right)}}{l + x{\\left(t \\right)}} - \\frac{2 \\frac{d}{d t} \\theta{\\left(t \\right)} \\frac{d}{d t} x{\\left(t \\right)}}{l + x{\\left(t \\right)}}$"
+      ],
+      "text/plain": [
+       "-g*sin(theta(t))/(l + x(t)) - 2*Derivative(theta(t), t)*Derivative(x(t), t)/(l + x(t))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol[smp.diff(theta,t,t)]"
+   ]
   }
  ],
  "metadata": {
@@ -327,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
